--- a/main.html
+++ b/main.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .container{
+            padding: 10px;
+            background-color:#f5f5f5;
+            border: 2px solid black;
+        }
+
+        .box{
+            border: 2px solid black;
+            padding: 10px;
+            background-color: antiquewhite;
+            margin: 10px ;
+        }
+        .Author{
+            text-align: right;
+            font-style: italic;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <section class="container">
+        <h1>Testimonial</h1>
+        <div class="box">
+                <p>This Product Was amezingilike it</p>
+                <p class="Author">Vishal chaudhari</p>
+        </div>
 
+        <div class="box">
+                <p>This Product Was amezingilike it</p>
+                <p class="Author">Vishal chaudhari</p>
+        </div>
+    </section>
 </body>
-
 </html>
