--- a/main.html
+++ b/main.html
@@ -24,17 +24,23 @@
     </style>
 </head>
 <body>
-    <section class="container">
-        <h1>Testimonial</h1>
-        <div class="box">
-                <p>This Product Was amezingilike it</p>
-                <p class="Author">Vishal chaudhari</p>
-        </div>
+   <section class="container">
+    <h1>Testimonial</h1>
+    <div class="box">
+        <p>This Product Was amazing, I like it</p>
+        <p class="Author">Vishal chaudhari</p>
+    </div>
 
-        <div class="box">
-                <p>This Product Was amezingilike it</p>
-                <p class="Author">Vishal chaudhari</p>
-        </div>
-    </section>
+    <div class="box">
+        <p>This Product Was amazing, I like it</p>
+        <p class="Author">Vishal chaudhari</p>
+    </div>
+
+    <!-- Add this new div -->
+    <div class="box">
+        <p>This Product Was amazing, I like it</p>
+        <p class="Author">John Doe</p>
+    </div>
+</section>
 </body>
 </html>
