--- a/main.html
+++ b/main.html
@@ -25,7 +25,9 @@
 </head>
 <body>
    <section class="container">
+	<div>
     <h1>Testimonial</h1>
+	</div>
     <div class="box">
         <p>This Product Was amazing, I like it</p>
         <p class="Author">Vishal chaudhari</p>
@@ -34,12 +36,6 @@
     <div class="box">
         <p>This Product Was amazing, I like it</p>
         <p class="Author">Vishal chaudhari</p>
-    </div>
-
-    <!-- Add this new div -->
-    <div class="box">
-        <p>This Product Was amazing, I like it</p>
-        <p class="Author">John Doe</p>
     </div>
 </section>
 </body>
